--- a/view/adminhtml/layout/quickorderingsystem_quickorders_add.xml
+++ b/view/adminhtml/layout/quickorderingsystem_quickorders_add.xml
@@ -6,3 +6,6 @@
         </referenceContainer>
     </body>
 </page>
+<!-- action layout
+In node   class - path of the respective block class
+Name - block name -->
