--- a/view/adminhtml/layout/quickorderingsystem_quickorders_index.xml
+++ b/view/adminhtml/layout/quickorderingsystem_quickorders_index.xml
@@ -6,3 +6,6 @@
         </referenceContainer>
     </body>
 </page>
+<!-- 
+Create action layout file for admin grid.
+create layout file for our admin grid, we define we use the Listing UI Component   -->
