--- a/view/frontend/templates/quickorder-view.phtml
+++ b/view/frontend/templates/quickorder-view.phtml
@@ -1,54 +1,55 @@
 <?php 
-    $objectManager = \Magento\Framework\App\ObjectManager::getInstance();
-    $product = $objectManager->get('Magento\Framework\Registry')->registry('current_product');//get current product
-?>
-<?php $helper = $this->helper("Graduation\QuickorderingSystem\Helper\Data"); ?>
-<?php $buttonTitle = $helper->getConfig('quickorder/general/button_title'); ?>
-<?php $postParams = [
+
+$objectManager = \Magento\Framework\App\ObjectManager::getInstance();
+$product = $objectManager->get('Magento\Framework\Registry')->registry('current_product');//get current product
+
+$helper = $this->helper("Graduation\QuickorderingSystem\Helper\Data");
+$buttonTitle = $helper->getConfig('quickorder/general/button_title');
+$postParams = [
             'id' => $product->getId(),
             'sku' => $product->getSku(),
-        ];
-print_r($postParams);?>
+        	];
+?>
 <div class="">
     <button type="submit"
             title="<?php echo $block->escapeHtml(__($buttonTitle)); ?>"
             class="quickorder primary"
-            id="product-callback-button"
+            id="product-quickorder-button"
             >
-        <span><?php /* @noEscape */ echo __($buttonTitle) ?> <?php /* @noEscape */ print_r($postParams['id']) ?><?php echo $block->getAjax(); ?> </span>
+        <span><?php /* @noEscape */ echo __($buttonTitle) ?></span>
     </button>
 </div>
 
 <div data-role="focusable-scope" id="popup_modal">
     <div id="popupmodal" style="">
         <div style="margin-top:20px;">
-            <table id="callback" border="0" cellspacing="0" cellpadding="0">
+            <table id="quickorder" border="0" cellspacing="0" cellpadding="0">
                 <tbody>
-                <input name="callback_sku" id="callback_sku_<?php echo $postParams['sku']?>" value="<?php echo $block->getProductParams($product)['sku']?>" type="text" hidden>
+                <input name="quickorder_sku" id="quickorder_sku_<?php echo $postParams['sku']?>" value="<?php echo $block->getProductParams($product)['sku']?>" type="text" hidden>
                 <tr>
                     <td style="width:20%;"><strong>Name*</strong></td>
                     <td>:</td>
                     <td>
-                        <input name="callback_name" id="callback_name" class="required-entry" value="" style="width:80%;" type="text">
+                        <input name="quickorder_name" id="quickorder_name" class="required-entry" value="" style="width:80%;" type="text">
                     </td>
                 </tr>
                 <tr>
                     <td style="width:20%;"><strong>Phone*</strong></td>
                     <td>:</td>
                     <td>
-                        <input name="callback_phone" id="callback_phone" class="required-entry" value="" style="width:80%;" type="text"><br/>
+                        <input name="quickorder_phone" id="quickorder_phone" class="required-entry" value="" style="width:80%;" type="text"><br/>
                     </td>
                 </tr>
                 <tr>
                     <td style="width:20%;"><strong>Email</strong></td>
                     <td>:</td>
                     <td>
-                        <input name="callback_email" type="email" id="callback_email" class="" value="" style="width:80%;" type="email"><br/>
+                        <input name="quickorder_email" type="email" id="quickorder_email" class="" value="" style="width:80%;" type="email"><br/>
                     </td>
                 </tr>
                 </tbody>
             </table>
-            <div class="save_data" id="submit_button">
+            <div class="" id="submit_quickorder">
                 <button type="submit"><?php echo __('Send'); ?></button>
             </div>
         </div>
@@ -74,24 +75,23 @@ print_r($postParams);?>
             };
 
             var popup = modal(options, $('#popup_modal'));
-            $("#product-callback-button").on('click',function(){
+            $("#product-quickorder-button").on('click',function(){
                 $("#popup_modal").modal("openModal");
                 // $(this).remove();
             });
 
             var url = '<?php echo $block->getAjax(); ?>';
 
-            $("#submit_button").on('click',function(){
-                var sku    = $("#callback_sku_<?php echo $postParams['sku']?>").val();
-                var name    = $("#callback_name").val();
-                var phone   = $("#callback_phone").val();
-                var email   = $("#callback_email").val();
-                console.log(url);
-                console.log(name);
-                console.log(sku);
-                console.log(phone);
-                console.log(email);
-                console.log('<?php echo $block->getFormKey() ?>');
+            $("#submit_quickorder").on('click',function(){
+                var sku     = $("#quickorder_sku_<?php echo $postParams['sku']?>").val();
+                var name    = $("#quickorder_name").val();
+                var phone   = $("#quickorder_phone").val();
+                var email   = $("#quickorder_email").val();
+                // console.log(url);
+                // console.log(name);
+                // console.log(sku);
+                // console.log(phone);
+                // console.log(email);
                 
                 $.ajax({
                 type: "POST",
@@ -103,7 +103,7 @@ print_r($postParams);?>
                 
                 success: function () {
                   $("#popup_modal").modal("closeModal");
-                    console.log('dddddddddddd');
+                    // console.log('dddddddddddd');
                 },  
 
                 error: function(XMLHttpRequest, textStatus, errorThrown) { 
